首頁文字修改

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
   
     <div class="footer__bottom">
       <p>&copy; 2025 品牌名稱 All Rights Reserved.</p>
-      <span>本網站為學習用途之作品，無任何商業行為，若有侵權請來信告知，我們將儘速處理。</span>
+      <span>本網站為學習用途之作品，無任何商業行為。</span>
     </div>
   </footer>
 <script src="unfinished.js"></script>
