微調首頁連結

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="zh-Hant"> <!-- 語系建議改為繁中 -->
+<html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>摯愛花藝</title>
 
-    <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <div class="navbar__logo">
         <a href="index.html">
             <div class="logo">
-                <img src="img/home/logo.png" alt="回到首頁">
+                <img src="img/index/logo.png" alt="回到首頁">
             </div>
         </a>
     </div>
@@ -55,7 +55,7 @@
     <div class="product-list">
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/5178.jpg" alt="">
+                <img src="img/index/5178.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -65,7 +65,7 @@
 
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/513.jpg" alt="">
+                <img src="img/index/513.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -75,7 +75,7 @@
 
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/4707.jpg" alt="">
+                <img src="img/index/4707.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -85,7 +85,7 @@
 
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img\home\5137.jpg" alt="">
+                <img src="img\index\5137.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -95,7 +95,7 @@
 
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/5178.jpg" alt="">
+                <img src="img/index/5178.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -105,7 +105,7 @@
 
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/513745.jpg" alt="">
+                <img src="img/index/513745.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <p>玫瑰-裝飾花</p>
@@ -123,7 +123,7 @@
     <div class="product-list_all">
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img/home/good_s.jpg" alt="">
+                <img src="img/index/good_s.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <h4>鮮花 老派約會之必要</h4>
@@ -136,7 +136,7 @@
         </div>
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img\home\goodssjpg.jpg" alt="">
+                <img src="img\index\goodssjpg.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <h4>鮮花 告白首選</h4>
@@ -149,7 +149,7 @@
         </div>
         <div class="product-item">
             <div class="product-item__img">
-                <img src="img\home\goods.jpg" alt="">
+                <img src="img\index\goods.jpg" alt="">
             </div>        
             <div class="product-item__info">
                 <h4>【鮮花】 告白首選</h4>
