--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>聯絡我們｜寵愛花藝</title>
+    <title>聯絡我們｜摯愛花藝</title>
     <link rel="stylesheet" href="css/contact.css">
 
 </head>
