新增所有商品頁面

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
     </div>
     <nav class="navbar__links">
         <a href="index.html">首頁</a>
-        <a href="#" class="unfinished">所有商品</a>
+        <a href="product.html">所有商品</a>
         <a href="#" class="unfinished">關於我們</a>
         <a href="contact.html" >聯絡我們</a>
         <a href="#" class="unfinished">購物車</a>
@@ -86,7 +86,7 @@
             <h3>摯愛選購</h3>
             <ul>
               <li class="unfinished"><a href="#">關於我們</a></li>
-              <li class="unfinished"><a href="#">所有商品</a></li>
+              <li><a href="product.html">所有商品</a></li>
               <li><a href="contact.html">聯絡我們</a></li>
             </ul>
           </div>
