--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <nav class="navbar__links">
         <a href="index.html">首頁</a>
-        <a href="#" class="unfinished">所有商品</a>
+        <a href="product.html">所有商品</a>
         <a href="#" class="unfinished">關於我們</a>
         <a href="contact.html" >聯絡我們</a>
         <a href="#" class="unfinished">購物車</a>
@@ -40,7 +40,7 @@
         <div class="about-section__img">
             <img src="img\ad.png" alt="形象圖">
         </div>
-        
+
         <div class="about-section__txt">
                <h1>Rose Story</h1>
                <p>愛神維納斯爲了尋找她的情人阿多尼斯，奔跑在多刺的玫瑰花叢中，玫瑰刺破了她的手，刺破了她的腿，鮮血滴在玫瑰的花瓣上，白玫瑰從此變成了紅色的，紅玫瑰也因此成了堅貞愛情的象徵......</p>
