增加所有商品頁面

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
           <span>本網站為學習用途之作品，無任何商業行為。</span>
         </div>
       </footer>
-<script src="unfinished.js"></script>
-<script src="menu.js"></script>
+<script src="js/unfinished.js"></script>
+<script src="js/menu.js"></script>
 </body>
 </html>
