--- a/contact.html
+++ b/contact.html
@@ -114,8 +114,8 @@
         </div>
       </footer>
 
-    <script src="unfinished.js"></script>
-    <script src="menu.js"></script>
+    <script src="js/unfinished.js"></script>
+    <script src="js/menu.js"></script>
     <script>
         document.getElementById('myForm').addEventListener('submit', function(event) {
     event.preventDefault();  // 防止表單提交
