--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
           <div class="logo">
             <img src="img/index/logo.png" alt="回到首頁" />
           </div>
+          <div><p>摯愛花藝</p></div>
         </a>
       </div>
       <div class="p">
