--- a/product.html
+++ b/product.html
@@ -29,7 +29,7 @@
           <nav class="navbar__links">
             <a href="index.html">首頁</a>
             <a href="product.html">所有商品</a>
-            <a href="#" class="unfinished">關於我們</a>
+            <a href="about.html">關於我們</a>
             <a href="contact.html">聯絡我們</a>
           </nav>
         </div>
@@ -44,7 +44,6 @@
           <span></span>
           <span></span>
         </div>
-    </div>
       </div>
     </header>
 
