--- a/about.html
+++ b/about.html
@@ -53,12 +53,23 @@
     <!-- Section 1 - 敘述 -->
     <section class="intro">
       <div class="intro-txt">
-        <h2>在靜默裡，讓花懂你。</h2>
+        <h2>
+          <span>在</span><span>靜</span><span>默</span><span>裡</span
+          ><span>，</span> <span>讓</span><span>花</span><span>懂</span
+          ><span>你</span><span>。</span>
+        </h2>
         <p>
-          摯愛花藝，相信花是一種語言，<br />
-          它能代替你說出不敢說的、說不出口的——愛、歉意、感謝、祝福。<br /><br />
-          我們為每一段情感注入細膩的設計，<br />
-          只為你送出的那一刻，成為永恆。
+          <span class="sentence">摯愛花藝，相信花是一種語言，</span>
+          <br />
+          <span class="sentence"
+            >它能代替你說出不敢說的、說不出口的—愛、歉意、感謝、祝福。</span
+          >
+        </p>
+
+        <p>
+          <span class="sentence">我們為每一段情感注入細膩的設計，</span>
+          <br />
+          <span class="sentence">只為你送出的那一刻，成為永恆。</span>
         </p>
       </div>
 
@@ -376,5 +387,9 @@
     <script src="js/unfinished.js"></script>
     <script src="js/increaseQuantity.js"></script>
     <script src="js/car.js"></script>
+
+    <!----------gsap ----------->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="js/about.js"></script>
   </body>
 </html>
