--- a/about.html
+++ b/about.html
@@ -60,15 +60,20 @@
         </h2>
         <p>
           <span class="sentence">摯愛花藝，相信花是一種語言，</span>
-          <br />
-          <span class="sentence"
-            >它能代替你說出不敢說的、說不出口的—愛、歉意、感謝、祝福。</span
-          >
+        </p>
+        <p>
+          <span class="sentence">它能代替你說出不敢說的、說不出口的</span>
+        </p>
+
+        <p>
+          <span class="sentence">—愛、歉意、感謝、祝福。</span>
         </p>
 
         <p>
           <span class="sentence">我們為每一段情感注入細膩的設計，</span>
-          <br />
+        </p>
+
+        <p>
           <span class="sentence">只為你送出的那一刻，成為永恆。</span>
         </p>
       </div>
