--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,7 @@
     </header>
 
     <div class="container">
+      <h4>CONTACT</h4>
       <h1>聯絡我們</h1>
       <p class="description">
         若您對商品或訂購流程有任何疑問，歡迎留言給我們，我們會盡快與您聯繫。
