--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
     <link rel="stylesheet" href="css/index.css" />
     <link rel="stylesheet" href="css/car.css" />
     <link rel="stylesheet" href="css/product-popup.css" />
+
+    <link rel="icon" href="img/icon16.png" />
+    <link rel="icon" href="img/icon32.png" type="image/png" />
+    <link rel="apple-touch-icon" href="img/icon180.png" />
+    <link rel="icon" href="img/icon192.png" />
   </head>
   <body>
     <!-- 第一個部分 導覽列 -->
@@ -75,7 +80,10 @@
     <!-- 第三個部分 精選商品-->
     <section class="product-section">
       <div class="product-section__title"><h2>玫瑰</h2></div>
-      <div class="product-section__subtitle"><h3>精選商品</h3></div>
+      <div class="product-section__subtitle">
+        <div><img src="img/Vector.png" alt="裝飾" /></div>
+        <h3>精選商品</h3>
+      </div>
 
       <div class="product-list">
         <!-- 商品 -->
@@ -217,7 +225,10 @@
 
     <!-- 第三個部分 商品-->
     <div class="product-section_all">
-      <div class="product-section__subtitle"><h3>所有商品</h3></div>
+      <div class="product-section__subtitle">
+        <div><img src="img/Vector.png" alt="裝飾" /></div>
+        <h3>所有商品</h3>
+      </div>
 
       <div class="product-list_all">
         <!-- 商品 -->
