新增滾動動態

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </header>
 
     <!-- 第二個部分 關於我們 -->
-    <section class="about-section">
+    <section class="about-section fade-in">
       <div class="about-section__img">
         <img src="img/ad.png" alt="形象圖" />
       </div>
@@ -78,7 +78,7 @@
     </section>
 
     <!-- 第三個部分 精選商品-->
-    <section class="product-section">
+    <section class="product-section fade-in">
       <div class="product-section__title"><h2>玫瑰</h2></div>
       <div class="product-section__subtitle">
         <div><img src="img/Vector.png" alt="裝飾" /></div>
@@ -224,7 +224,7 @@
     </section>
 
     <!-- 第三個部分 商品-->
-    <div class="product-section_all">
+    <div class="product-section_all fade-in">
       <div class="product-section__subtitle">
         <div><img src="img/Vector.png" alt="裝飾" /></div>
         <h3>所有商品</h3>
