--- a/contact.html
+++ b/contact.html
@@ -47,10 +47,10 @@
           <span></span>
           <span></span>
         </div>
-    </div>
+      </div>
     </header>
 
-    <div class="container">
+    <div class="container fade-in">
       <h4>CONTACT</h4>
       <h1>聯絡我們</h1>
       <p class="description">
