--- a/product.html
+++ b/product.html
@@ -58,7 +58,7 @@
         </select>
       </div>
 
-      <div class="product-grid">
+      <div class="product-grid fade-in">
         <!-- 商品 -->
         <div
           class="product-card product"
